ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-reddit-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "dmain.com"
      http:
        paths:
          - pathType: Prefix
            path: "/test"
            backend:
              service:
                name: reddit-clone-service
                port:
                  number: 3000
    - host: "*.dmain.com"
      http:
        paths:
          - pathType: Prefix
            path: "/test"
            backend:
              service:
                name: reddit-clone-service
                port:
                  number: 3000
